--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,16 @@
-<p>home works!</p>
+<nav class="navbar navbar-expand-lg navbar-light bg-gradient-info shadow">
+    <a href="client/inicio" class="navbar-brand">
+        <img src="../../../assets/img/software.png" height="40" alt="Página principal Comfeco" title="Ir a página de inicio" />
+    </a>
+    <ul class="navbar-nav ml-auto">
+        <li class="nav-item dropdown no-arrow">
+            <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" title="Ir a Mi perfil">
+                <span class="mr-2 d-none d-lg-inline text-gray-600 small"> Usuario </span>
+            </a>
+        </li>
+    </ul>
+</nav>
+<div class="text-center mt-3">
+    <h2 class="text-gray-800 font-weight-bold">Ingenieria de software I - Proyecto final IoT</h2>
+</div>
+<app-termometro></app-termometro>
