--- a/src/styles.css
+++ b/src/styles.css
@@ -3,3 +3,21 @@
 body {
     background-color: whitesmoke;
 }
+
+html,
+body {
+    height: 100%;
+    position: relative;
+    margin: 0 !important;
+    padding: 0 !important;
+    min-height: 100vh !important;
+}
+
+body {
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+}
+
+.main-container {
+    min-height: 100vh;
+}
