--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -3,10 +3,39 @@
     align-self: center;
     justify-self: center;
     grid-area: texto;
-  }
+}
 
-  .texto-emotivo p:last-child {
+.texto-emotivo p:last-child {
     font-style: italic;
     max-width: 500px;
     margin: auto;
-  }
+}
+
+.termometro {
+    grid-area: termometro;
+    justify-content: center;
+    align-items: center;
+}
+
+.list-termometro {
+    grid-area: listTermometro;
+    justify-content: center;
+    align-items: center;
+}
+
+.title {
+    grid-area: title;
+    justify-content: center;
+    align-items: center;
+}
+
+.container-fluid {
+    padding: 0;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 300px 80px 1fr;
+    grid-template-areas: "termometro termometro" "title title" "listTermometro listTermometro";
+    row-gap: 1em;
+    column-gap: 1em;
+    max-width: 1300px;
+}
