--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -7,7 +7,7 @@
                 <!-- Nested Row within Card Body -->
                 <div class="row">
                     <div class="col-lg-6 d-none d-lg-block bg-login-image"></div>
-                    <div class="col-lg-6 d-flex justify-content-center align-items-center">
+                    <div class="col-lg-6">
                         <div class="p-5" *ngIf="!loading">
                             <div class="text-center">
                                 <h1 class="h4 text-gray-900 mb-4">Bienvenido!</h1>
