--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,23 +1,7 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-gradient-info shadow">
-    <a href="client/inicio" class="navbar-brand">
-        <img src="../../../assets/img/software.png" height="40" alt="Página principal Comfeco" title="Ir a página de inicio" />
-        <a href="/client/chatbot" class="stretched-link text-danger">Chat Bot</a>
-    </a>
-    <ul class="navbar-nav ml-auto">
-        <li class="nav-item dropdown no-arrow">
-            <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" title="Ir a Mi perfil">
-                <span class="mr-2 d-none d-lg-inline text-gray-600 small"> Usuario </span>
-            </a>
-        </li>
-    </ul>
-</nav>
+<app-header></app-header>
 <div class="text-center mt-3">
     <h2 class="text-gray-800 font-weight-bold">Ingenieria de software I - Proyecto final IoT</h2>
 </div>
 <div class="container-fluid py-2">
     <app-termometro class="termometro"></app-termometro>
-    <div class="text-center mt-3 title">
-        <h2 class="text-gray-800 font-weight-bold">Registro de temperaturas</h2>
-    </div>
-    <app-list-temperatures class="lis-termometro"></app-list-temperatures>
 </div>
