registerClinic and registerDoctor

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -10,11 +10,14 @@
             <a class="nav-item nav-link" routerLinkActive="active" [routerLink]="['/client/temperaturas']" [routerLinkActiveOptions]=" {exact:true} ">
               Temperaturas
             </a>
-            <a class="nav-item nav-link" routerLinkActive="active" [routerLink]="['/client/registrar']" [routerLinkActiveOptions]=" {exact:true} ">
-              Registrar clinica y Doctor
-            </a>
             <a class="nav-item nav-link" routerLinkActive="active" [routerLink]="['/client/chatbot']" [routerLinkActiveOptions]=" {exact:true} ">
               ChatBot
+            </a>
+            <a class="nav-item nav-link" routerLinkActive="active" [routerLink]="['/client/registrarClinica']" [routerLinkActiveOptions]=" {exact:true} ">
+              RegistrarClinica
+            </a>
+            <a class="nav-item nav-link" routerLinkActive="active" [routerLink]="['/client/registrarDoctor']" [routerLinkActiveOptions]=" {exact:true} ">
+              RegistrarDoctor
             </a>
         </div>
     </div>
